deploy/kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: community-oracle
  namespace: reddit-demo
  labels:
    app: community-oracle
spec:
  type: ClusterIP
  ports:
    - port: 4040
      targetPort: 4040
      protocol: TCP
      name: oracle-port
  selector:
    app: community-oracle
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-oracle
  namespace: reddit-demo
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: community-oracle
  template:
    metadata:
      labels:
        app: community-oracle
    spec:
      containers:
        - name: community-oracle
          image: matterlabs/community-oracle:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4040
---
apiVersion: v1
kind: Service
metadata:
  name: service-provider
  namespace: reddit-demo
  labels:
    app: service-provider
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: service-provider-port
  selector:
    app: service-provider
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-provider
  namespace: reddit-demo
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: service-provider
  template:
    metadata:
      labels:
        app: service-provider
    spec:
      containers:
        - name: service-provider
          image: matterlabs/service-provider:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: reddit-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - community-service.zksync.dev
      secretName: zksync-dev
  rules:
    - host: community-service.zksync.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: service-provider
              servicePort: 8080
